chore: add JMX monitoring, deployment script, and documentation